# tbooo

./: .gitignore  README.md  Snakefile  config.yaml  pyproject.toml
docs/: 0_tbooo_overview.md  1_ukb_structure.md  2_data_sources.md  3_data_mapping.md
docs/superpowers/specs/: 2026-06-17-validated-idempotency-design.md
playground/: parquet_stats.py
src/tbooo/: cli.py  config.py  integrity.py  utils.py
src/tbooo/download/: geuvadis.py  kg.py  reference.py  sgdp.py
src/tbooo/pipeline/: array.py  eda.py  eids.py  geuvadis.py  imputed.py  phenotypes.py  qc.py  runner.py  wes.py  wgs.py
